2007-02-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, doc/geany.docbook, src/geany.h, src/interface.c,
   src/keybindings.c, src/keybindings.h, src/keyfile.c, src/main.c,
   src/tools.c, src/tools.h:
   Added custom commands to send selected text through some definable
   commands and replace the selection with the output.
 * data/filetype_extensions.conf, src/filetypes.c:
   Added *.pod to Perl file patterns.
 * src/sci_cb.c: Auto complete multi line comments only when auto
                 completion of constructs is enabled.


2007-02-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c:
   Prevent undefined behaviour when using the Stop command that can kill
   X when Geany is run from the KDE or Xfce menu (not from a terminal).
   Should close #1668017.


2007-02-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in, Makefile.am, README.I18N, po/intl_stats.sh, po/LINGUAS:
   Moved list of available translations to new file po/LINGUAS.
   Added readme file for translation information.
   Added little shell script intl_stats.sh to display some basic
   translation statistics.


2007-02-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/*.c:
   Add descriptions for all .c source files below the file header.


2007-02-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c, src/document.c, src/document.h, src/main.c:
   Speed up loading multiple C-like files when restoring session or
   loading command-line files at startup by ensuring documents are
   only colourised once.
   Also prevent re-colourising C-like documents after saving a file
   unless the list of typenames has changed.
   Add document_delay_colourise(), document_colourise_all().
 * src/dialogs.c, src/document.c, src/document.h:
   Fixed switching to the wrong tab when showing the unsaved dialog.
 * src/templates.c:
   Don't include filetype.none in the new file template menus.


2007-02-20  Enrico Tröger  <enrico.troeger@uvena.de>
