@@ -1,3 +1,8 @@
+2007-02-26  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * src/tools.c: Fixed wrong sensitiveness of custom commands menu items.
+
+
 2007-02-25  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * geany.glade, doc/geany.docbook, src/geany.h, src/interface.c,
